# singleton-manager

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
