[package]
name = "singleton-manager"
version = "0.1.1"
authors = ["Anders Blenstrup-Pedersen <abp-git@ryuu.technology>"]
edition = "2018"
description = "A programatical singleton manager"
readme = "README.md"
categories = ["memory-management", "rust-patterns"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { versio = "0.8.2", features = ["v4"], version = "0.8.2" }
